# argus

./: .env.example  .env.saas.example  .gitignore  README.md  RETIRE.md  argus.service  install-service.sh  pyproject.toml  requirements.txt
app/: __init__.py  async_client.py  audit.py  auth.py  auth_context.py  billing.py  callbacks.py  cap_alerts.py  client.py  client_common.py  client_ip.py  cloud_vision.py  config.py  db.py  folder_fingerprint.py  grok_client.py  health.py  image_io.py  jobs.py  main.py  metering.py  metrics.py  mise_client.py  mise_dedup.py  mnemosyne_adapter.py  pipeline.py  plutus_client.py  provider_compare.py  rate_limit.py  saas.py  safe_fetch.py  service.py  sidecars.py  storage.py  structured_log.py  structured_output.py  tenants.py  vision.py  vision_prefilter.py  vision_status.py  (+1 more)
docs/: CALLBACK-CONTRACT.md  DOGFOOD-STANDARD.md  PHASE-0.md  PHASE-3-PLAN.md  PHASE-3.md  PHASE-4-PLAN.md  PHASE-4.md  PHASE-5.md  ROADMAP.md  STRUCTURED-OUTPUT.md  TOKEN-ROTATION.md  VISION-PROVIDERS.md  example_mnemosyne_client.py  lightroom_export_stub.py  prometheus-alerts.example.yml
examples/: prompt_examples.json
ops/: argus-backup-user.service  argus-backup-user.timer  argus-backup.service  argus-backup.timer  argus-user.service
schemas/: vision.schema.json
scripts/: backup-db.sh  compare_providers.py  deploy-homelab.sh  deploy-mise-plutus-code.sh  deploy-mise-plutus.sh  deploy-smoke.sh  dogfood-pipeline.sh  dogfood-studio-loop.sh  dogfood_export_folder.py  dogfood_full_loop.py  dogfood_mise_loop.py  dogfood_prefs_roundtrip.py  dogfood_proof.py  (+15 more)
(+70 files in other folders)
