[project]
name = "argus"
version = "0.3.0"
description = "Photography-tuned vision & metadata service — Phase 4 (history prefs + hardening)"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "pillow",
    "ollama",
    "pydantic",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
argus = "app.main:cli_main"  # placeholder for future CLI
